--- a/README
+++ b/README
@@ -13,6 +13,10 @@ It supports theme specific images, stylesheets, javascripts, and views. The
 views can be in ERb (rhtml) or liquid formats. Optionally, you can configure 
 the theme system to ignore any templates except liquid ones.
 
+== Changes from the original version
+
+ * Rake tasks are now namespaced, eg: "rake themes:cache:create" instead of "rake theme_create_cache"
+ * Layouts now live within themes/[theme_name]/views/layouts to match up with Rails conventions
 
 == Usage
 
@@ -25,11 +29,12 @@ It expects the following theme folder structure.
   $app_root
     themes/
       [theme_name]
-        layouts/         <- layout .rhtml or .liquid templates
+        
         images/
         stylesheets/
         javascripts/
         views/           <- you can override application views
+          layouts/         <- layout .rhtml or .liquid templates
         about.markdown
         preview.png
 
